etc/tests/error/type/undefined-call.ny
;; expect: undefined symbol
use std.core

does_not_exist(1, 2)
